--- a/anurag_protfolio.html
+++ b/anurag_protfolio.html
@@ -314,32 +314,209 @@
             </div>
         </section>
 
-        <section id="projects">
-            <h2 class="section-title text-gray-800 dark:text-indigo-100">Projects</h2>
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-12 max-w-5xl mx-auto text-gray-700 dark:text-gray-300">
-                <div class="project-card card">
-                    <h3 class="text-xl font-semibold mb-2">Pen&Paper Blog</h3>
-                    <p>A Django-based Blog Application built with Bootstrap and TailwindCSS.</p>
-                    <a href="https://github.com/anuragv314/pen-paper-blog" target="_blank"
-                        class="text-indigo-600 hover:text-indigo-800 interactive-button">View on GitHub</a>
-                </div>
-                <div class="project-card card">
-                    <h3 class="text-xl font-semibold mb-2">WaveTranscribe</h3>
-                    <p>Audio Waveform and Speech-to-Text Converter using Whisper AI, Matplotlib, and FastAPI.</p>
-                    <a href="https://github.com/anuragv314/wavetranscribe" target="_blank"
-                        class="text-indigo-600 hover:text-indigo-800 interactive-button">View on GitHub</a>
-                </div>
-                <div class="project-card card">
-                    <h3 class="text-xl font-semibold mb-2">HR Analytics Dashboard</h3>
-                    <p>Power BI dashboard analyzing employee attrition and retention trends.</p>
-                    <a href="https://github.com/anuragv314/hr-analytics" target="_blank"
-                        class="text-indigo-600 hover:text-indigo-800 interactive-button">View on GitHub</a>
-                </div>
-                <div class="project-card card">
-                    <h3 class="text-xl font-semibold mb-2">Learning Management System Prototype</h3>
-                    <p>Django backend LMS prototype with AWS S3 video storage and PostgreSQL/MongoDB.</p>
-                    <a href="https://github.com/anuragv314/lms-prototype" target="_blank"
-                        class="text-indigo-600 hover:text-indigo-800 interactive-button">View on GitHub</a>
+       <section id="projects" class="py-16 bg-gray-100 dark:bg-gray-900">
+            <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
+                <h2 class="text-3xl font-bold text-center text-gray-800 dark:text-white mb-12">Projects</h2>
+
+                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+
+                    <div
+                        class="bg-white dark:bg-gray-800 shadow rounded-xl p-6 transform transition duration-500 hover:-translate-y-2 hover:shadow-xl">
+                        <div class="flex items-center mb-4">
+                            <h3 class="text-lg font-semibold">Multiple Disease Prediction System</h3>
+                        </div>
+                        <p class="text-sm text-gray-600 dark:text-gray-300 mb-4">A machine learning model trained to
+                            predict diseases based on user-entered symptoms. Uses classification techniques and a
+                            user-friendly interface for interaction.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-indigo-600 font-medium">ML / Jupyter</span>
+                            <a href="https://github.com/anuragv314/Multiple-Disease-Prediction-System" target="_blank"
+                                class="text-sm text-indigo-600 hover:underline">GitHub →</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="bg-white dark:bg-gray-800 shadow rounded-xl p-6 transform transition duration-500 hover:-translate-y-2 hover:shadow-xl">
+                        <div class="flex items-center mb-4">
+                            <h3 class="text-lg font-semibold">Deep Learning with TensorFlow</h3>
+                        </div>
+                        <p class="text-sm text-gray-600 dark:text-gray-300 mb-4">Exploration of deep learning
+                            concepts
+                            using TensorFlow. Includes model training, evaluation, and visualization on various
+                            datasets
+                            for experimentation and learning.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-indigo-600 font-medium">TensorFlow / Jupyter</span>
+                            <a href="https://github.com/anuragv314/Deep-Learning-with-Tensorflow-" target="_blank"
+                                class="text-sm text-indigo-600 hover:underline">GitHub →</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="bg-white dark:bg-gray-800 shadow rounded-xl p-6 transform transition duration-500 hover:-translate-y-2 hover:shadow-xl">
+                        <div class="flex items-center mb-4">
+                            <h3 class="text-lg font-semibold">Chess Grand Master Project</h3>
+                        </div>
+                        <p class="text-sm text-gray-600 dark:text-gray-300 mb-4">A Jupyter Notebook-based chess
+                            logic
+                            and simulation project. Designed as a template for building custom chess AI or strategy
+                            experiments.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-indigo-600 font-medium">Python / Chess</span>
+                            <a href="https://github.com/anuragv314/BarryugoChess-Project" target="_blank"
+                                class="text-sm text-indigo-600 hover:underline">GitHub →</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="bg-white dark:bg-gray-800 shadow rounded-xl p-6 transform transition duration-500 hover:-translate-y-2 hover:shadow-xl">
+                        <div class="flex items-center mb-4">
+                            <svg class="w-6 h-6 text-indigo-600 mr-2" fill="none" stroke="currentColor" stroke-width="2"
+                                viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M9 12l2 2 4-4M7 8h10M7 16h10" />
+                            </svg>
+                            <h3 class="text-lg font-semibold">WaveTranscribe</h3>
+                        </div>
+                        <p class="text-sm text-gray-600 dark:text-gray-300 mb-4">A speech-to-text transcription app
+                            using Whisper AI. Visualizes audio waveforms with Matplotlib and uses FastAPI for
+                            backend
+                            processing. Supports multi-language input and real-time analysis.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-indigo-600 font-medium">FastAPI / Whisper</span>
+                            <a href="https://github.com/anuragv314/wavetranscribe" target="_blank"
+                                class="text-sm text-indigo-600 hover:underline">GitHub →</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="bg-white dark:bg-gray-800 shadow rounded-xl p-6 transform transition duration-500 hover:-translate-y-2 hover:shadow-xl">
+                        <div class="flex items-center mb-4">
+                            <svg class="w-6 h-6 text-indigo-600 mr-2" fill="none" stroke="currentColor" stroke-width="2"
+                                viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M3 10h4l3 10h8l3-10h4" />
+                            </svg>
+                            <h3 class="text-lg font-semibold">HR Analytics Dashboard</h3>
+                        </div>
+                        <p class="text-sm text-gray-600 dark:text-gray-300 mb-4">An interactive Power BI dashboard
+                            that
+                            visualizes HR data for employee attrition and retention. Uses KPIs and visual
+                            storytelling
+                            to uncover insights from churn trends and tenure analysis.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-indigo-600 font-medium">Power BI</span>
+                            <a href="https://github.com/anuragv314/hr-analytics" target="_blank"
+                                class="text-sm text-indigo-600 hover:underline">GitHub →</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="bg-white dark:bg-gray-800 shadow rounded-xl p-6 transform transition duration-500 hover:-translate-y-2 hover:shadow-xl">
+                        <div class="flex items-center mb-4">
+                            <h3 class="text-lg font-semibold">Django Projects</h3>
+                        </div>
+                        <p class="text-sm text-gray-600 dark:text-gray-300 mb-4">A collection of Django
+                            mini-projects
+                            including blog apps and admin dashboards. Useful for practicing views, templates, and
+                            CRUD
+                            operations.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-indigo-600 font-medium">Django / JS</span>
+                            <a href="https://github.com/anuragv314/Django-Projects" target="_blank"
+                                class="text-sm text-indigo-600 hover:underline">GitHub →</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="bg-white dark:bg-gray-800 shadow rounded-xl p-6 transform transition duration-500 hover:-translate-y-2 hover:shadow-xl">
+                        <div class="flex items-center mb-4">
+                            <h3 class="text-lg font-semibold">MERN Stack Project</h3>
+                        </div>
+                        <p class="text-sm text-gray-600 dark:text-gray-300 mb-4">A full-stack MERN project using
+                            MongoDB, Express.js, React, and Node.js. Implements user authentication, CRUD
+                            operations,
+                            and responsive components.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-indigo-600 font-medium">MongoDB / React / Node</span>
+                            <a href="https://github.com/anuragv314/MERN-Stack-Project" target="_blank"
+                                class="text-sm text-indigo-600 hover:underline">GitHub →</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="bg-white dark:bg-gray-800 shadow rounded-xl p-6 transform transition duration-500 hover:-translate-y-2 hover:shadow-xl">
+                        <div class="flex items-center mb-4">
+                            <h3 class="text-lg font-semibold">MiniGitHub</h3>
+                        </div>
+                        <p class="text-sm text-gray-600 dark:text-gray-300 mb-4">
+                            Create a GitHub-like app with MERN stack (MongoDB, Express.js, React.js, Node.js) and
+                            Passport.js for authentication.
+                            Features include user registration, login, protected routes, and basic GitHub-like
+                            functionalities such as repositories and profiles.
+                        </p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-indigo-600 font-medium">MERN / Passport.js</span>
+                            <a href="https://github.com/anuragv314/minigithub" target="_blank"
+                                class="text-sm text-indigo-600 hover:underline">GitHub →</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="bg-white dark:bg-gray-800 shadow rounded-xl p-6 transform transition duration-500 hover:-translate-y-2 hover:shadow-xl">
+                        <div class="flex items-center mb-4">
+                            <svg class="w-6 h-6 text-indigo-600 mr-2" fill="none" stroke="currentColor" stroke-width="2"
+                                viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M8 7V3m8 4V3m-9 14h10m-8 4h6" />
+                            </svg>
+                            <h3 class="text-lg font-semibold">Learning Management System</h3>
+                        </div>
+                        <p class="text-sm text-gray-600 dark:text-gray-300 mb-4">A backend prototype of an LMS with
+                            Django, AWS S3 for storing course videos, and PostgreSQL/MongoDB for tracking progress.
+                            Includes user roles, assignments, and grading features.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-indigo-600 font-medium">Django / AWS / DBs</span>
+                            <a href="https://github.com/anuragv314/lms-prototype" target="_blank"
+                                class="text-sm text-indigo-600 hover:underline">GitHub →</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="bg-white dark:bg-gray-800 shadow rounded-xl p-6 transform transition duration-500 hover:-translate-y-2 hover:shadow-xl">
+                        <div class="flex items-center mb-4">
+                            <svg class="w-6 h-6 text-indigo-600 mr-2" fill="none" stroke="currentColor" stroke-width="2"
+                                viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M13 16h-1v-4h-1m4 0h.01M12 20h.01M4 6h16M4 10h16M4 14h16M4 18h16" />
+                            </svg>
+                            <h3 class="text-lg font-semibold">Pen&Paper Blog</h3>
+                        </div>
+                        <p class="text-sm text-gray-600 dark:text-gray-300 mb-4">A Django-based blog platform that
+                            allows users to create, edit, and manage posts. Styled with Bootstrap and TailwindCSS
+                            for a
+                            clean UI. Implements authentication and responsive design.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-indigo-600 font-medium">Django / Tailwind</span>
+                            <a href="https://github.com/anuragv314/pen-paper-blog" target="_blank"
+                                class="text-sm text-indigo-600 hover:underline">GitHub →</a>
+                        </div>
+                    </div>
+
+                    <div
+                        class="bg-white dark:bg-gray-800 shadow rounded-xl p-6 transform transition duration-500 hover:-translate-y-2 hover:shadow-xl">
+                        <div class="flex items-center mb-4">
+                            <h3 class="text-lg font-semibold">DSA GFG</h3>
+                        </div>
+                        <p class="text-sm text-gray-600 dark:text-gray-300 mb-4">Data Structures and Algorithms
+                            practice
+                            project based on GeeksForGeeks. Contains Java implementations for sorting, searching,
+                            recursion, and more.</p>
+                        <div class="flex justify-between items-center">
+                            <span class="text-xs text-indigo-600 font-medium">Java / DSA</span>
+                            <a href="https://github.com/anuragv314/DSA_gfg" target="_blank"
+                                class="text-sm text-indigo-600 hover:underline">GitHub →</a>
+                        </div>
+                    </div>
+
+
                 </div>
             </div>
         </section>
