--- a/anurag_protfolio.html
+++ b/anurag_protfolio.html
@@ -302,15 +302,37 @@
         <section id="skills">
             <h2 class="section-title text-gray-800 dark:text-indigo-100">Skills</h2>
             <div
-                class="grid grid-cols-2 md:grid-cols-4 gap-8 max-w-4xl mx-auto text-center text-gray-700 dark:text-gray-300 font-semibold">
+                class="grid grid-cols-2 md:grid-cols-4 gap-8 max-w-5xl mx-auto text-center text-gray-700 dark:text-gray-300 font-semibold">
                 <div class="card">Python</div>
+                <div class="card">Java</div>
+                <div class="card">C</div>
+                <div class="card">JavaScript</div>
                 <div class="card">Django</div>
                 <div class="card">FastAPI</div>
+                <div class="card">Flask</div>
+                <div class="card">RESTful APIs</div>
                 <div class="card">PostgreSQL</div>
                 <div class="card">MongoDB</div>
-                <div class="card">JavaScript</div>
+                <div class="card">MySQL</div>
                 <div class="card">HTML & CSS</div>
-                <div class="card">Machine Learning</div>
+                <div class="card">Bootstrap</div>
+                <div class="card">Tailwind CSS</div>
+                <div class="card">Git</div>
+                <div class="card">Linux</div>
+                <div class="card">Docker</div>
+                <div class="card">Pandas</div>
+                <div class="card">NumPy</div>
+                <div class="card">Matplotlib</div>
+                <div class="card">Seaborn</div>
+                <div class="card">Plotly</div>
+                <div class="card">Power BI</div>
+                <div class="card">Scikit-Learn</div>
+                <div class="card">Supervised Learning</div>
+                <div class="card">Unsupervised Learning</div>
+                <div class="card">Neural Networks</div>
+                <div class="card">K-Means Clustering</div>
+                <div class="card">DBSCAN</div>
+                <div class="card">Hierarchical Clustering</div>
             </div>
         </section>
 
