--- a/anurag_protfolio.html
+++ b/anurag_protfolio.html
@@ -256,7 +256,7 @@
         <canvas id="orbitParticles" class="absolute inset-0"></canvas>
         <div class="hero-content relative z-10 p-4">
             <h2 class="text-5xl font-extrabold mb-4">Hi, I'm Anurag</h2>
-            <p class="text-xl max-w-xl">Full Stack Developer and Data Explorer crafting scalable web apps and
+            <p class="text-xl max-w-xl">Software Engineer and Data Explorer crafting scalable web apps and
                 intelligent
                 systems with Python, Django, FastAPI, and Machine Learning.</p>
             <div class="mt-6 space-x-4">
