--- a/anurag_protfolio.html
+++ b/anurag_protfolio.html
@@ -284,6 +284,33 @@
                 </a>
             </div>
         </div>
+
+        <div id="download-container" class="flex flex-col items-center mt-8">
+            <button id="download-btn"
+                class="group relative inline-flex items-center px-6 py-3 bg-indigo-600 bg-opacity-30 backdrop-blur-sm text-white text-base font-semibold rounded-lg border border-white border-opacity-20 shadow-md overflow-hidden transition-all duration-300 hover:bg-opacity-20 hover:border-opacity-40 focus:outline-none focus:ring-4 focus:ring-indigo-400 focus:ring-opacity-50">
+                <span
+                        class="absolute left-0 w-0 h-full bg-indigo-400 opacity-20 transition-all duration-300 group-hover:w-full"></span>
+                
+                <svg class="w-6 h-6 mr-2 transition-transform duration-300 group-hover:scale-125 group-hover:translate-y-1"
+                    fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M4 16v2a2 2 0 002 2h12a2 2 0 002-2v-2M7 10l5 5 5-5M12 4v12" />
+                </svg>
+                Download Resume
+            </button>
+
+            <div id="progress-container" class="w-72 mt-7 hidden">
+                <div
+                    class="relative h-4 bg-white bg-opacity-10 backdrop-blur-sm rounded-md shadow-inner overflow-hidden border border-white border-opacity-20">
+                    <div id="progress-bar"
+                        class="absolute left-0 top-0 h-4 bg-indigo-500 bg-opacity-70 rounded-md transition-all duration-200"
+                        style="width: 0%"></div>
+                    <span id="progress-label"
+                        class="absolute w-full left-0 top-0 h-4 flex items-center justify-center text-xs font-semibold text-white">0%</span>
+                </div>
+            </div>
+        </div>
+        
     </section>
 
     <main class="container mx-auto px-6 py-16 space-y-20">
@@ -845,6 +872,43 @@
             animate();
         }
     </script>
+
+
+
+    <script>
+            const downloadBtn = document.getElementById('download-btn');
+            const progressContainer = document.getElementById('progress-container');
+            const progressBar = document.getElementById('progress-bar');
+            const progressLabel = document.getElementById('progress-label');
+
+            downloadBtn.addEventListener('click', function () {
+                downloadBtn.style.display = "none";
+                progressContainer.classList.remove('hidden');
+                let percent = 0;
+                progressBar.style.width = "0%";
+                progressLabel.textContent = "0%";
+                const interval = setInterval(() => {
+                    percent += Math.floor(10 + Math.random() * 15);
+                    if (percent > 100) percent = 100;
+                    progressBar.style.width = percent + "%";
+                    progressLabel.textContent = percent + "%";
+                    if (percent === 100) {
+                        clearInterval(interval);
+                        progressLabel.textContent = "Completed";
+                        setTimeout(() => {
+                            progressContainer.classList.add('hidden');
+                            downloadBtn.style.display = "inline-flex";
+                            const link = document.createElement('a');
+                            link.href = 'Anurag_Python_01.pdf'; // Change path as needed
+                            link.download = 'Anurag_Verma_Resume.pdf';
+                            document.body.appendChild(link);
+                            link.click();
+                            document.body.removeChild(link);
+                        }, 700);
+                    }
+                }, 180);
+            });
+        </script>
 </body>
 
 </html>
