add updated resume

--- a/anurag_protfolio.html
+++ b/anurag_protfolio.html
@@ -1122,7 +1122,7 @@
                         progressContainer.classList.add('hidden');
                         downloadBtn.style.display = "inline-flex";
                         const link = document.createElement('a');
-                        link.href = 'Anurag_Python_01.pdf'; // Change path as needed
+                        link.href = 'Anurag-py.pdf'; // Change path as needed
                         link.download = 'Anurag_Verma_Resume.pdf';
                         document.body.appendChild(link);
                         link.click();
